# k4q

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  go.mod
cmd/kaf/: kaf.go
cmd/kaf/commands/: commands.go  enum_support.go  query.go
config/: log4rs-test.yaml
src/: main.rs
src/async_tools/: mod.rs  option.rs
src/cli/: action_recognizer.rs  action_selector.rs  cli_command.rs  cli_command_recognizer.rs  cli_configuration.rs  cli_parser.rs  command_recognizer.rs  command_selector.rs  composed_cli_command.rs  mod.rs  port_action_recognizer.rs  properties_location_provider.rs  query_key_equlas_value.rs  query_matcher.rs
src/cli/action_selector/: key_equals_value.rs
src/cli/command/: mod.rs  query.rs
src/cli/command_selector/: key_equals_value.rs
src/cli/query_matcher/: key_equlas_value.rs
src/console/: channel_progress.rs  error_notifier.rs  mod.rs  progress.rs  progress_notifier.rs
src/di/: mod.rs  runner.rs
src/domain/: action.rs  app.rs  command.rs  criteria.rs  mod.rs  port.rs  ports.rs  prepared_command.rs  query.rs  record.rs  service.rs
src/domain/model/: application_properties.rs  command.rs  count.rs  criteria.rs  estimated_query_range.rs  k4fq_error.rs  k4q_error.rs  mod.rs  offset.rs  partition.rs  partition_id.rs  progress.rs  properties.rs  query_range.rs  recognized_command.rs  record.rs  record_key.rs  topic.rs  topic_name.rs  topics_matcher_type.rs  watermark.rs
src/domain/ports/: command_recognizer.rs  mod.rs  progress_notifier.rs
src/domain/services/: app.rs  mod.rs
src/iter/: complete_aware_iterator.rs  finish_aware_iterator.rs  into_iterated_result.rs  into_sequential_iterator.rs  mod.rs  parallel_iterator_ex.rs
src/kafka/: configured_context.rs  kafka_query_range_estimator.rs  kafka_reader.rs  kafka_session.rs  metadata_reader.rs  mod.rs  partition_reader.rs  partitions_reader.rs  properties.rs  query_range_estimator.rs  record_finder.rs  stream_consumer_factory.rs  timeout_aware_stream_consumer.rs  topic_reader.rs  topics_finder.rs
src/monads/: mod.rs  reader.rs  result_t.rs
src/properties/: configuration_loader.rs  mod.rs
tests/: kafka.rs  kafka_tests.rs
