[package]
name = "k4fq"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.5", features = ["string"] }
home = '0.5.4'
indicatif = "0.17.3"
predicates = "3.0.3"
rdkafka = { version = "0.36.0", features = ["cmake-build"] }
serde = "1.0"
serde_json = "1.0"
erased-serde = "0.4.1"
config = "0.13"
rayon = '1.6'
tokio = { version = "1.32", features = ["full"] }
do-notation = "0.1"
itertools = "0.12.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
futures = { version = "0.3.4" }
async-trait = "0.1.73"

[dev-dependencies]
# latest version - 0.12.0 doesn't contain kafka, so I used latest dev instead
#testcontainers = { git="https://github.com/testcontainers/testcontainers-rs.git", ref="4b6b59f8fccd51cca812662df1701a3186a87b1f" }
testcontainers = "0.15.0"

log = "0.4"
log4rs = "1"
assert_cmd = "2.0"

mockall = "0.12.1"
