[package]
name = "k4fq"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.25"
home = '0.5.11'
indicatif = "0.17.9"
predicates = "2.1.5"
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
serde = "1.0.217"
serde_json = "1.0.135"
erased-serde = "0.3.31"
shaku = "0.6.2"
config = "0.11.0"
rayon = '1.10.0'
crossbeam = '0.8.4'
tokio = { version = "1.43.0", features = ["full"] }
do-notation = "0.1.3"
itertools = "0.10.5"

[dev-dependencies]
# latest version - 0.12.0 doesn't contain kafka, so I used latest dev instead
#testcontainers = { git="https://github.com/testcontainers/testcontainers-rs.git", ref="4b6b59f8fccd51cca812662df1701a3186a87b1f" }
testcontainers = '0.13'

log = "0.4.25"
log4rs = "1.3.0"
assert_cmd = "2.0.16"

mockall = "0.11.4"

futures = '0.3.31'
